# RestaurantReviewPlatform

./: Dockerfile  main.py  manage.py  pyproject.toml  todo.py
backend/: logging.py  logging.yaml  settings.py  urls.py  utils.py
backend/logs/: app.logs.jsonl
job_tests/: log_tut.py  logging_config.yaml
restaurants/: models.py  serializers.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py  0002_remove_review_unique_user_restaurant_review.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_username.py
