[project]
name = "restaurantreviewplatform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "django>=5.2, <6",
    "django-types>=0.22.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "pika>=1.3.2",
    "pydantic>=2.12.5",
    "redis>=7.1.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "transformers>=4.57.6",
]
